fix(core): fix header squish on small screen
Set a minimum width to the header so that it doesnt squeeze content
too much whenever the screen size is reduced

--- a/internal/static/internal/css/header.css
+++ b/internal/static/internal/css/header.css
@@ -1,5 +1,7 @@
 .header{
     padding: 0.5em 4em;
+    width: 100%;
+    min-width: 1200px;
     height: 60px;
     box-sizing: border-box;
     /* The bottom drawer needs an anchor from this div to position itself absolutely */
